--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -13,6 +13,7 @@ header {
     justify-content: space-between;
     padding: 15px;
     background-color: #F5DB13;
+    box-shadow: 0px 3px 21px -5px rgba(0,0,0,0.75);
 }
 
 header > img {
@@ -41,6 +42,60 @@ header > button {
     border-bottom: 4px solid black;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+}
+
+main, main > div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    font-family: 'Karla', sans-serif;
+    text-align: center;
+}
+
+main {
+    background: linear-gradient(#F5DB13,#F2B807);
+}
+
+main > div > h1 {
+    font-size: 42px;
+    font-weight: normal;
+    padding: 20px 40px;
+}
+
+main > div > p {
+    font-size: 24px;
+    font-weight: 400;
+    padding: 20px 40px;
+    line-height: 32px;
+}
+
+.pikachu {
+    max-width: 100%;
+}
+
+.link-pokemon {
+    width: 300px;
+    height: 50px;
+    border-radius: 11px;
+    background: #73D677;
+    box-shadow: 0px 7px 0px 0px #5eaf62;
+    margin-top: 10px;
+    font-size: 23px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;   
+}
+
 @media(min-width: 481px){
 
     header {
@@ -48,12 +103,12 @@ header > button {
     }
 
     header > img {
-    width: 128px;
+        width: 128px;
     }
 
 }
 
-@media (min-width: 690px){
+@media(min-width: 690px){
     
     .hamburger-menu {
         display: none;
@@ -63,4 +118,34 @@ header > button {
         display: flex;
     }
 
+}
+
+@media(min-width: 769px) {
+    
+    main{
+        flex-direction: row-reverse;
+    }
+
+    main > img, main > div{
+        flex-grow: 1;
+    }
+
+    .pikachu {
+        max-width: 55%;
+    }
+    
+    main > div {
+       justify-content: space-between;
+    }
+
+    main > div > p {
+        margin: 30px 0;
+        font-size: 32px;
+        text-align: left;
+    }
+
+    main > div> h1 {
+        font-size: 72px;
+        text-align: left;
+    }
 }
