--- a/assets/styles/legendaries.css
+++ b/assets/styles/legendaries.css
@@ -223,4 +223,25 @@ h1 {
 	.legendaries-carrossel {
 		margin-bottom: 40px;
 	}
+
+	@media (min-width: 1400px) {
+
+	header {
+		padding: 20px 130px;
+	}
+
+	h1 {
+		font-size: 72px;
+		margin: 40px 130px;
+	}
+	.hidden-3 {
+		display: inline-block;
+	}
+
+	.legendaries-info {
+		margin: 30px 130px;
+	}
+	.legendaries-carrossel {
+		margin: 30px 130px 30px 130px;
+	}
 }
