--- a/assets/styles/legendaries.css
+++ b/assets/styles/legendaries.css
@@ -225,23 +225,21 @@ h1 {
 	}
 
 	@media (min-width: 1400px) {
+		.main-container {
+			max-width: 1400px;
+			margin: 0 auto;
+		}
+
 		header {
 			padding: 20px 130px;
 		}
 
-		h1 {
-			font-size: 72px;
-			margin: 40px 130px;
-		}
 		.hidden-3 {
 			display: inline-block;
 		}
 
-		.legendaries-info {
-			margin: 30px 130px;
-		}
 		.legendaries-carrossel {
-			margin: 30px 130px 30px 130px;
+			margin: 30px auto;
 		}
 	}
 }
