--- a/pokedexMVC/public/stylesheets/index.css
+++ b/pokedexMVC/public/stylesheets/index.css
@@ -1,47 +1,3 @@
-* {
-	box-sizing: border-box;
-	border: 0;
-	outline: 0;
-	padding: 0;
-	margin: 0;
-}
-
-header {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	padding: 15px;
-	background-color: #f5db13;
-	box-shadow: 0px 3px 21px -5px rgba(0, 0, 0, 0.75);
-}
-
-header > img {
-	width: 64px;
-}
-
-header > button {
-	background: none;
-}
-
-.navbar {
-	display: none;
-}
-
-.navbar > a {
-	font-size: 1.5rem;
-	color: #212121;
-	margin-right: 20px;
-	text-decoration: none;
-	font-family: "Karla", sans-serif;
-	font-weight: 500;
-}
-
-.navbar-home {
-	padding: 0 5px 9px 5px;
-	border-bottom: 4px solid black;
-}
-
 body {
 	display: flex;
 	flex-direction: column;
@@ -55,7 +11,7 @@ main > div {
 	flex-direction: column;
 	align-items: center;
 	height: 100%;
-	font-family: "Karla", sans-serif;
+	font-family: 'Karla', sans-serif;
 	text-align: center;
 }
 
