--- a/pokedexMVC/public/stylesheets/legendaries.css
+++ b/pokedexMVC/public/stylesheets/legendaries.css
@@ -1,47 +1,3 @@
-* {
-	box-sizing: border-box;
-	border: 0;
-	outline: 0;
-	padding: 0;
-	margin: 0;
-}
-
-header {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	padding: 15px;
-	background-color: #f5db13;
-	box-shadow: 0px 3px 21px -5px rgba(0, 0, 0, 0.75);
-}
-
-header > img {
-	width: 64px;
-}
-
-header > button {
-	background: none;
-}
-
-.navbar {
-	display: none;
-}
-
-.navbar > a {
-	font-size: 1.5rem;
-	color: #212121;
-	margin-right: 20px;
-	text-decoration: none;
-	font-family: "Karla", sans-serif;
-	font-weight: 500;
-}
-
-.navbar-legendaries {
-	padding: 0 5px 9px 5px;
-	border-bottom: 4px solid black;
-}
-
 body {
 	display: flex;
 	flex-direction: column;
@@ -51,7 +7,7 @@ body {
 main {
 	background-color: #1d1e1d;
 	color: #fdfdfd;
-	font-family: "Karla", sans-serif;
+	font-family: 'Karla', sans-serif;
 }
 
 h1 {
@@ -63,6 +19,10 @@ h1 {
 	color: #ffffff;
 }
 
+.legendary-not-found {
+	height: calc(100vh - 380px);
+}
+
 .legendaries-info {
 	margin: 0 25px;
 	padding-top: 30px;
@@ -72,8 +32,10 @@ h1 {
 	align-items: center;
 }
 
-.legendaries-main-img {
+.legendaries-main-img > img {
 	max-width: 80%;
+	display: block;
+	margin: 0 auto;
 }
 
 .legendaries-name {
@@ -84,7 +46,7 @@ h1 {
 }
 
 .legendaries-description {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 14px;
 	line-height: 17px;
 	font-weight: 400;
@@ -146,6 +108,14 @@ h1 {
 	display: none;
 }
 
+.legendaries-carrossel > a > img {
+	filter: brightness(50%);
+}
+
+#brightness {
+	filter: brightness(100%);
+}
+
 @media (min-width: 481px) {
 	header {
 		padding: 20px 10px;
@@ -153,6 +123,10 @@ h1 {
 
 	header > img {
 		width: 128px;
+	}
+
+	.legendary-not-found {
+		height: calc(100vh - 380px);
 	}
 }
 
@@ -168,12 +142,20 @@ h1 {
 	.hidden {
 		display: inline-block;
 	}
+
+	.legendary-not-found {
+		height: calc(100vh - 420px);
+	}
 }
 
 @media (min-width: 769px) {
 	h1 {
 		font-size: 72px;
 		margin: 40px 70px;
+	}
+
+	.legendary-not-found {
+		height: calc(100vh - 500px);
 	}
 
 	.legendaries-info {
@@ -183,9 +165,12 @@ h1 {
 	}
 
 	.legendaries-main-img {
-		max-width: 60%;
-		margin: 0 10px;
-		padding: 0 10px;
+		max-width: 70%;
+	}
+
+	.legendaries-main-img > img {
+		display: block;
+		margin: 0;
 	}
 
 	.legendaries-name {
@@ -197,7 +182,7 @@ h1 {
 	}
 
 	.legendaries-carrossel {
-		margin: 0 auto;
+		margin: 0 auto 15px;
 	}
 
 	.hidden-1 {
@@ -239,7 +224,7 @@ h1 {
 		}
 
 		.legendaries-carrossel {
-			margin: 30px auto;
+			margin: 50px auto;
 		}
 	}
 }
