--- a/pokedexMVC/views/index.ejs
+++ b/pokedexMVC/views/index.ejs
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/global.css">
+    <link rel="stylesheet" href="/stylesheets/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <img src="/images/logo.svg" alt="Logo" />
+        <button type="button" class="hamburger-menu">
+            <img src="/images/hamburger.svg" alt="Botão do menu" />
+        </button>
+        <nav class="navbar">
+            <a href="#" class="navbar-home"> Home </a>
+            <a href="#">Pokédex</a>
+            <a href="#">Legendaries</a>
+            <a href="#">Documentation</a>
+        </nav>
+    </header>
+    <main>
+        <img class="pikachu" src="images/pikachu.svg" alt="pikachu"></img>
+        <div>
+            <h1><strong>Find</strong> all your favorite <strong>Pokemon</strong></h1>
+            <p>You can know the type of Pokemon, its strengths, disadvantages and abilities</p>
+            <a href="#" class="link-pokemon">See pokemons</a>
+        </div>
+        <a href="#" class="botao-flutuante">
+            <img src="/images/pokebola.svg" alt="pokebola">
+        </a>
+    </main>
+</body>
 </html>
