Legendaries view updated

--- a/pokedexMVC/views/legendaries.ejs
+++ b/pokedexMVC/views/legendaries.ejs
@@ -110,7 +110,7 @@
 						id="brightness" <% } else { %> id="" <% } %> />
 					</a>
 					<a href="?name=diancie">
-						<img src="/images/cards/card-diance.svg" alt="card-diance" class="hidden-2" <% if ( legendary.name === 'Diance') { %>
+						<img src="/images/cards/card-diance.svg" alt="card-diance" class="hidden-2" <% if ( legendary.name === 'Diancie') { %>
 						id="brightness" <% } else { %> id="" <% } %> />
 					</a>
 					<a href="?name=xerneas">
